--- a/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
+++ b/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
@@ -6,7 +6,7 @@
         <a>
             <span class="glyphicon glyphicon-shopping-cart"></span>
             <span id="cart-status">
-                @Model.ShoppingCartTotal
+                @Model.ShoppingitemQty
             </span>
         </a>
     </li>
