--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,8 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 5px;
-    padding-bottom: 20px;
+    padding-top: 5px !important;
+    padding-bottom: 30px !important;
     /*background-color:red !important;*/
 }
 
@@ -28,8 +28,12 @@ p.ex1 {
     /* border: 1px solid red;*/
     padding-top: 25px;
 }
-
-
+/*.navbar-vertical .navbar-nav .nav-link {
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    padding-right: 1rem;
+    padding-left: 1rem;
+}*/
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
