--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -202,7 +202,7 @@
                                             <a asp-action="existedApplications" asp-controller="Career" class="nav-link">View Applications</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a asp-controller="Account" asp-action="RegisterUser" class="nav-link">Register New User</a>
+                                            <a asp-controller="Account" asp-action="RegisterUser" class="nav-link">Register User</a>
                                         </li>
                                         <li class="nav-item">
                                             <a asp-controller="BioData" asp-action="approvedstaffCatalog" class="nav-link">Add to Catlog</a>
