--- a/Views/Account/DeleteUsers.cshtml
+++ b/Views/Account/DeleteUsers.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "DeleteUsers";
 }
 
-<h1>DeleteUsers</h1>
+@*<h1>DeleteUsers</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this?</h3>*@
 <div>
     <h4>UsersViewModels</h4>
     <hr />
@@ -40,6 +40,6 @@
     <form asp-action="DeleteUsers">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+       @* <a asp-action="Index">Back to List</a>*@
     </form>
 </div>
