--- a/Views/Account/EditUsers.cshtml
+++ b/Views/Account/EditUsers.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "EditUsers";
 }
-
+@*
 <h1>EditUsers</h1>
 
-<h4>UsersViewModels</h4>
+<h4>UsersViewModels</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
