--- a/Views/Account/RegisterUser.cshtml
+++ b/Views/Account/RegisterUser.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "RegisterUser";
 }
 
-<h1>RegisterUser</h1>
+@*<h1>RegisterUser</h1>
 
-<h4>RegisterUser</h4>
+<h4>RegisterUser</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
