--- a/Views/Account/createRole.cshtml
+++ b/Views/Account/createRole.cshtml
@@ -3,10 +3,10 @@
 @{
 //ViewData["Title"] = "createRole";
 }
-
+@*
 <h1>createRole</h1>
 
-<h4>ApplicationRole</h4>
+<h4>ApplicationRole</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
