--- a/wwwroot/assets/css/argon.mine209.css
+++ b/wwwroot/assets/css/argon.mine209.css
@@ -14174,18 +14174,19 @@ textarea[resize=horizontal] {
 }
 
     .navbar-vertical .navbar-nav .nav-link {
-        font-size: 1rem;
+        font-size: 1.5rem;
         font-weight: 500;
         padding-right: 1rem;
         padding-left: 1rem
     }
 
         .navbar-vertical .navbar-nav .nav-link.active {
-            position: relative
+            position: relative;
+            color:blue
         }
 
         .navbar-vertical .navbar-nav .nav-link > i {
-            font-size: 1rem;
+            font-size: 1.5rem;
             line-height: 1.5rem;
             min-width: 2rem
         }
@@ -14199,7 +14200,7 @@ textarea[resize=horizontal] {
             }
 
     .navbar-vertical .navbar-nav .nav-sm .nav-link {
-        font-size: 1rem
+        font-size: 1.5rem
     }
 
     .navbar-vertical .navbar-nav .nav-link {
