--- a/Views/Account/RegisterUser.cshtml
+++ b/Views/Account/RegisterUser.cshtml
@@ -6,45 +6,106 @@
 
 @*<h1>RegisterUser</h1>
 
-<h4>RegisterUser</h4>*@
+    <h4>RegisterUser</h4>*@
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="panel panel-default">
+    <div class="panel-body">
         <form asp-action="RegisterUser" asp-controller="Account" method="post">
             @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="password" class="control-label"></label>
-                <input type="password" asp-for="password" class="form-control" />
-                <span asp-validation-for="password" class="text-danger"></span>
-                @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
 
+            <div class="panel panel-primary">
+                <div class="panel-heading">User Registration</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="FirstName" class="control-label"></label>
+                                <input asp-for="FirstName" class="form-control" />
+                                <span asp-validation-for="FirstName" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="LastName" class="control-label"></label>
+                                <input asp-for="LastName" class="form-control" />
+                                <span asp-validation-for="LastName" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Email" class="control-label"></label>
+                                <input asp-for="Email" class="form-control" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="UserName" class="control-label"></label>
+                                <input asp-for="UserName" class="form-control" />
+                                <span asp-validation-for="UserName" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="password" class="control-label"></label>
+                                <input type="password" asp-for="password" class="form-control" />
+                                <span asp-validation-for="password" class="text-danger"></span>
+                                @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="RoleName" class="control-label"></label>
+                                <select asp-for="RoleId" id="roleId" class="form-control" asp-items="@(new SelectList(@ViewBag.listofRoles,"Id","Name"))">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    @*<div class="row">
+                        <div class="col-md-8">
+                        </div>
+
+                        <div class="col-md-8">
+                        </div>
+                    </div>*@
+
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+
+
+
+
+
+
+
+
+            @*<div class="form-group">
                 <label asp-for="FullName" class="control-label"></label>
                 <input asp-for="FullName" class="form-control" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
-            </div>
+                </div>*@
+            @*<div class="row">
+                <div class="col-md-4">
+
+
+                </div>
+
+                <div class="col-md-4">
+                </div>
+
+                </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -52,7 +113,7 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+    </div>*@
 
