--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -231,6 +231,12 @@
                                     <li class="nav-item">
                                             <a asp-action="existedCareers" asp-controller="Career" class="nav-link">View Career</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a asp-action="existedApplications" asp-controller="Career" class="nav-link">View Applications</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a asp-controller="Account" asp-action="RegisterUser" class="nav-link">Register User</a>
+                                        </li>
                                 </ul>
                             </div>
                         </li>
