--- a/Views/YearsExperienceCost/CreateCost.cshtml
+++ b/Views/YearsExperienceCost/CreateCost.cshtml
@@ -93,7 +93,7 @@
 
                         <div class="row">
 
-                            <div class="col-md-2">
+                            <div class="col-md-4">
 
                                 <div class="form-group">
                                     <label class="control-label">Years Lower Bound</label>
@@ -105,7 +105,7 @@
 
                             </div>
 
-                            <div class="col-md-2">
+                            <div class="col-md-4">
 
                                 <div class="form-group">
                                     <label class="control-label">Years Higher Bound</label>
@@ -116,8 +116,10 @@
                                 </div>
 
                             </div>
-                            <div class="col-md-2">
-
+                            
+                        </div>
+                         <div class="row">
+                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label class="control-label">Amount </label>
                                     <br />
@@ -126,7 +128,7 @@
                                 </div>
 
                             </div>
-                        </div>
+                            </div>
 
                         @*<div class="row">
 
