--- a/Views/Career/Application.cshtml
+++ b/Views/Career/Application.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CareerID" />
             <div class="panel panel-primary">
-                <div class="panel-heading">Schedule an Appointment</div>
+                <div class="panel-heading">Career Details</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4">
