--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <!-- Icons -->
-   @* <link rel="stylesheet" href="~/assets/vendor/nucleo/css/nucleo.css" type="text/css">
-    <link rel="stylesheet" href="~/assets/vendor/%40fortawesome/fontawesome-free/css/all.min.css" type="text/css">*@
+    <link rel="stylesheet" href="~/assets/vendor/nucleo/css/nucleo.css" type="text/css">
+    <link rel="stylesheet" href="~/assets/vendor/%40fortawesome/fontawesome-free/css/all.min.css" type="text/css">
     <!-- Page plugins -->
     
     <!-- Argon CSS -->
@@ -40,7 +40,7 @@
     <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" type="text/css" />    
     <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">*@
 
 
 
@@ -74,7 +74,7 @@
             <div class="sidenav-header d-flex align-items-center">
                 <a class="fa fa-home" asp-controller="Career" asp-action="existedCareers">
                     @*<img src="~/assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
-                    <span class="nav-link-text">Home</span>
+                    <span class="nav-link-text"></span>
                 </a>
                 <div class="ml-auto">
                     <!-- Sidenav toggler -->
@@ -103,7 +103,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link" href="#admin" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="admin">
-                                    <i class="fa fa-fw fa-user"></i>
+                                    <i class="ni ni-archive-2 text-green"></i>
                                     <span class="nav-link-text">Admin</span>
                                 </a>
                                 <div class="collapse" id="admin">
@@ -221,7 +221,7 @@
                         }
                         <li class="nav-item">
                             <a class="nav-link" href="#default" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="default">
-                                <i class="fa fa-fw fa-wrench"></i>
+                                <i class="ni ni-books text-blue"></i>
                                 <span class="nav-link-text">Defaults</span>
                             </a>
                             <div class="collapse" id="default">
