--- a/Views/Career/existedCareers.cshtml
+++ b/Views/Career/existedCareers.cshtml
@@ -1,26 +1,61 @@
 ﻿@model IEnumerable<BiodataTest.ViewModels.CareerViewModel>
+@using BiodataTest.Utility
 
-
-
+@{
+    Pager pager = new Pager();
+    int pageNo = 0;
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
+}
 
 
 <div class="card-columns">
     @foreach (var item in Model)
     {
-    <div class="card">
-        <div class="card-img">
-            <img src="~/CareerIMG/@item.CareerImageUrl"/>
-            <div class="card-body">
-                <h3 class="card-title">@item.CareerName</h3>
-                <h4>@item.CareerDesc</h4>
-                @*<h5>@item.CareerID</h5>*@
-                <a asp-action="Application" asp-route-id="@item.CareerID" asp-controller="Career">View Details/Apply</a>
+        <div class="card">
+            <div class="card-img">
+                <img src="~/CareerIMG/@item.CareerImageUrl" />
+                <div class="card-body">
+                    <h3 class="card-title">@item.CareerName</h3>
+                    <h4>@item.CareerDesc</h4>
+                    @*<h5>@item.CareerID</h5>*@
+                    <a asp-action="Application" asp-route-id="@item.CareerID" asp-controller="Career">View Details/Apply</a>
+                </div>
             </div>
+
         </div>
-       
-    </div>  
-    
-   
+
+
+    }
+
+</div>
+<div class="container">
+    @if (pager.TotalPages > 0)
+    {
+        <ul class="pagination justify-content-end">
+            @for (var pge = pager.StartPage; pge <= pager.EndPage; pge++)
+            {
+                <li class="page-item @(pge==pager.CurrentPage ? "active":"")">
+                    <a class="page-link" asp-controller="Career" asp-action="existedCareers" asp-route-pg="@pge">@pge</a>
+                </li>
+            }
+
+            @if(pager.CurrentPage < pager.TotalPages)
+            {
+                 <li class="page-item">
+                    <a class="page-link" asp-controller="Career" asp-action="existedCareers" asp-route-pg="@(pager.CurrentPage + 1)">Next</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" asp-controller="Career" asp-action="existedCareers" asp-route-pg="@(pager.TotalPages)">Last</a>
+                </li>
+            }
+
+
+        </ul>
     }
 
 </div>
