--- a/Views/Career/existedCareers.cshtml
+++ b/Views/Career/existedCareers.cshtml
@@ -36,6 +36,19 @@
     @if (pager.TotalPages > 0)
     {
         <ul class="pagination justify-content-end">
+
+            @if(pager.CurrentPage > 1)
+            {
+                 <li class="page-item">
+                    <a class="page-link" asp-controller="Career" asp-action="existedCareers" asp-route-pg="1">First</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" asp-controller="Career" asp-action="existedCareers" asp-route-pg="@(pager.CurrentPage - 1)">Previous</a>
+                </li>
+            }
+
+
             @for (var pge = pager.StartPage; pge <= pager.EndPage; pge++)
             {
                 <li class="page-item @(pge==pager.CurrentPage ? "active":"")">
