--- a/Views/Career/CreateCareer.cshtml
+++ b/Views/Career/CreateCareer.cshtml
@@ -125,7 +125,7 @@
                                     @Html.DisplayFor(modelItem => item.CareerName)
                                 </td>*@
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.CareerID">Edit</a> |
+                                    <a asp-action="EditCareer" asp-route-id="@item.CareerID">Edit</a> |
                                     <a asp-action="Details" asp-route-id="@item.CareerID">Details</a> |
                                     <a asp-action="Delete" asp-route-id="@item.CareerID">Delete</a>
                                 </td>
