--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -306,7 +306,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-10"><h1 class="text-white">OutSourcing Sol</h1></div>
+                        <div class="col-md-10"><h1 class="text-white">Out Sourcing Solution</h1></div>
 
                         <div class="col-md-2">
 
