--- a/Views/Career/EditCareer.cshtml
+++ b/Views/Career/EditCareer.cshtml
@@ -1,5 +1,8 @@
 ﻿@model BiodataTest.ViewModels.CareerViewModel
-
+@*@{
+   // ViewBag.Title = "title";
+    Layout = "_Layout";
+}*@
 
 <hr />
 <div class="panel panel-default">
