--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
     <link rel="stylesheet" href="~/assets/css/argon.mine209.css" type="text/css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="="text/css"" />
     <link rel="stylesheet" href="~/css/loading.css">
-    <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" />
+    <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" type="text/css" />
     <link href="~/css/site.css" rel="stylesheet" type="text/css" />    
-    <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" />
+    
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">*@
 
 
@@ -402,6 +402,7 @@
                             @*<partial name="_login" />*@
                             @*  <partial name="_CookieConsentPartial" />*@
             <partial name="_NotificationPanel" />
+            @*@Html.Partial("_NotificationPanel")*@
 
                             @RenderBody()
 
@@ -459,7 +460,7 @@
     <script src="~/assets/js/demo.min.js"></script>
     <script src="~/js/main.js"></script>
     <script src="~/sweetAlert/sweetalert.min.js"></script>
-    @*<script src="~/sweetAlert/sweetalert.min.js"></script>*@
+   @* <script src="~/sweetAlert~/sweetAlert/sweetalert-dev.js"></script>*@
     <script>
         // Facebook Pixel Code Don't Delete
         ! function (f, b, e, v, n, t, s) {
